[package]
name = "cavestory"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled="0.9"
lazy_static="1.4.0"
rand="0.8"
num-traits = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"]}

[dependencies.sdl2]
version="0.35"
features = ["ttf", "image", "gfx", "mixer"]
